test/langtools/tools/javac/importChecks/ImportsObservable.out
ImportsObservable.java:9:8: compiler.err.doesnt.exist: javax
1 error
